<!--
  Copyright (c) 2015 btows.com.
  
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lock_bg_green" >

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickEvent"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="12dp"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:scaleType="fitCenter"
                android:src="@drawable/title_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:gravity="center_vertical"
                android:text="@string/time_lock_edit"
                android:textColor="@color/text_color_white"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            
            android:gravity="center_vertical"
            android:onClick="onClickEvent"
            android:paddingRight="12dp"
            android:text="@string/lock_save"
            android:textColor="@color/text_color_white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_wv"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@id/rl_title"
        android:gravity="center"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="220dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="140dp"
                android:layout_height="40dp"
                
                android:gravity="center"
                android:text="@string/time_start"
                android:textColor="@color/text_color_white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="180dp"
                android:background="@drawable/time_wheel_bg"
                android:gravity="center"
                android:orientation="horizontal" >

                <kankan.wheel.widget.WheelView
                    android:id="@+id/wv_start_h"
                    android:layout_width="70dp"
                    android:layout_height="160dp" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/wv_start_m"
                    android:layout_width="70dp"
                    android:layout_height="160dp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="220dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="140dp"
                android:layout_height="40dp"
                
                android:gravity="center"
                android:text="@string/time_end"
                android:textColor="@color/text_color_white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="180dp"
                android:background="@drawable/time_wheel_bg"
                android:gravity="center"
                android:orientation="horizontal" >

                <kankan.wheel.widget.WheelView
                    android:id="@+id/wv_end_h"
                    android:layout_width="70dp"
                    android:layout_height="160dp" />

                <kankan.wheel.widget.WheelView
                    android:id="@+id/wv_end_m"
                    android:layout_width="70dp"
                    android:layout_height="160dp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_wv"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@drawable/line_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="26dp"
            android:paddingRight="26dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                
                android:gravity="center_vertical"
                android:text="@string/time_repeat"
                android:textColor="@color/text_color_white"
                android:textSize="20sp" />

            <com.cleanwiz.applock.ui.widget.SwitchButton
                android:id="@+id/cb_repeat"
                android:layout_width="54dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingLeft="26dp"
            android:paddingRight="26dp" >

            <TextView
                android:id="@+id/week_check_1"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/time_week_bg"
                
                android:gravity="center"
                android:text="@string/week_1"
                android:textColor="@color/text_color_white"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/week_check_2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/time_week_bg"
                
                android:gravity="center"
                android:text="@string/week_2"
                android:textColor="@color/text_color_white"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/week_check_3"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/time_week_bg"
                
                android:gravity="center"
                android:text="@string/week_3"
                android:textColor="@color/text_color_white"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/week_check_4"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/time_week_bg"
                
                android:gravity="center"
                android:text="@string/week_4"
                android:textColor="@color/text_color_white"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/week_check_5"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/time_week_bg"
                
                android:gravity="center"
                android:text="@string/week_5"
                android:textColor="@color/text_color_white"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/week_check_6"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/time_week_bg"
                
                android:gravity="center"
                android:text="@string/week_6"
                android:textColor="@color/text_color_white"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/week_check_7"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/time_week_bg"
                
                android:gravity="center"
                android:text="@string/week_7"
                android:textColor="@color/text_color_white"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@drawable/line_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/btn_enter_app"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:onClick="onClickEvent"
            android:paddingLeft="26dp"
            android:paddingRight="26dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                
                android:gravity="center_vertical"
                android:text="@string/lock_app"
                android:textColor="@color/text_color_white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/arrow_app"
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitEnd"
                android:src="@drawable/arrow_right" />

            <TextView
                android:id="@+id/tv_app_num"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_toLeftOf="@id/arrow_app"
                
                android:gravity="center_vertical"
                android:text="@string/lock_choose"
                android:textColor="@color/text_color_white"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@drawable/line_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_lockname"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                
                android:gravity="center_vertical"
                android:text="@string/lock_name"
                android:textColor="@color/text_color_white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_lockname"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@id/tv_lockname"
                android:background="@android:color/transparent"
                android:gravity="right|center_vertical"
                android:hint="@string/lock_hint"
                android:textColor="@color/text_color_white"
                android:textColorHint="@color/text_color_grey"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@drawable/line_bg"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>
