<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015 btows.com.
  
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tk_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/update_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:gravity="left|center_vertical"
            android:text="@string/clear_tips"
            android:textColor="@color/text_color_white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/clear_all_log"
            android:textColor="@color/text_color_black2"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/tk_btn"
                android:text="@string/lock_cancel"
                android:textColor="#FFD987"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/tk_btn"
                android:text="@string/lock_ok"
                android:textColor="#FFD987"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
